# sch

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml
apps/core/: Cargo.toml  build.rs
apps/core/src/: action_executor.rs  action_registry.rs  clipboard_history.rs  config.rs  contract.rs  core_service.rs  discovery.rs  hotkey.rs  hotkey_runtime.rs  index_store.rs  lib.rs  logging.rs  main.rs  model.rs  overlay_state.rs  plugin_sdk.rs  query_dsl.rs  runtime.rs  search.rs  settings.rs  settings_window.rs  startup.rs  transport.rs  uninstall_registry.rs  windows_overlay.rs
apps/core/tests/: action_executor_test.rs  config_test.rs  contract_test.rs  core_service_test.rs  discovery_test.rs  hotkey_runtime_test.rs  hotkey_test.rs  index_store_test.rs  perf_query_latency_test.rs  search_test.rs  settings_test.rs  startup_test.rs  transport_test.rs  windows_runtime_smoke_test.rs
docs/: README.md
docs/architecture/: configuration-spec.md  macOS Spotlight Features and Usage.md  search-indexing-design.md  security-privacy.md  system-architecture.md
docs/decisions/: ADR-001-core-stack.md
docs/engineering/: master-phase-task-tracker.md  risk-register.md  roadmap.md  spotlight-feature-reference.md  spotlight-parity-architecture.md  sprint4-verification.md  subagent-handoff-fixes.md  testing-and-quality.md  v1-roadmap.md  windows-operator-runbook.md  windows-packaging-readiness.md  windows-runtime-behavior.md  windows-runtime-validation-checklist.md  windows-security-release-checklist.md  windows-update-rollout-strategy.md
docs/plans/: 2026-02-11-windows-fuzzy-finder-mvp.md  2026-02-13-flow-launcher-parity-plan.md  2026-03-02-swiftfind-memory-config-icon-plan.md
docs/product/: project-charter.md  requirements.md  user-flows.md
docs/releases/: v2.1.0-notes.md  windows-milestone-release-notes-template.md
scripts/windows/: inspect-start-app-sources.ps1  install-nex.ps1  install-swiftfind.ps1  nex.iss  package-windows-artifact.ps1  package-windows-installer.ps1  (+8 more)
(+9 files in other folders)
