[package]
name = "swiftfind-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "swiftfind_core"
path = "src/lib.rs"

[[bin]]
name = "swiftfind-core"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
